--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -36,9 +36,11 @@
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/button1"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_alignRight="@+id/button1"
             android:layout_marginTop="48dp"
+            android:onClick="createAccountView"
             android:text="@string/createAccount" />
 
     </RelativeLayout>
