--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -40,7 +40,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignRight="@+id/button1"
             android:layout_marginTop="48dp"
-            android:onClick="createAccountView"
+            android:onClick="onClick"
             android:text="@string/createAccount" />
 
     </RelativeLayout>
