--- a/res/layout/display_account_layout.xml
+++ b/res/layout/display_account_layout.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <ListView
-        android:id="@android:id/android:list"
+
+        <ListView
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
-    
 
 </LinearLayout>
