--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,6 +10,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="116dp"
+            android:onClick="onClick"
             android:text="@string/displayAccountButton" />
 
         <Button
@@ -20,6 +21,7 @@
             android:layout_alignRight="@+id/button1"
             android:layout_below="@+id/button1"
             android:layout_marginTop="22dp"
+            android:onClick="onClick"
             android:text="@string/debitButton" />
 
         <Button
@@ -30,6 +32,7 @@
             android:layout_alignRight="@+id/button2"
             android:layout_below="@+id/button2"
             android:layout_marginTop="26dp"
+            android:onClick="onClick"
             android:text="@string/setDatesButton" />
 
         <Button
