--- a/res/layout/display_account_ex_layout.xml
+++ b/res/layout/display_account_ex_layout.xml
@@ -9,11 +9,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="28dip" />
-       <TextView
+    <TextView
+        android:id="@+id/account_name_entry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="28dip" />
+     <TextView
         android:id="@+id/number_entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="28dip" />
-    
 
 </LinearLayout>
