cleanup and fixed int to double issue

--- a/res/layout/debit_layout.xml
+++ b/res/layout/debit_layout.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.01"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="numberDecimal" />
 
     <RelativeLayout
         android:layout_width="match_parent"
