need to refactor database...from there beta should be done

--- a/res/layout/widthdrawal_layout.xml
+++ b/res/layout/widthdrawal_layout.xml
@@ -28,9 +28,17 @@
         android:hint="@string/amount"
         android:inputType="numberDecimal" />
 
-    <DatePicker
-        android:id="@+id/datePicker1"
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/dateButton" 
+        android:onClick="showDatePickerDialog"/>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ConfirmButton" />
 
 </LinearLayout>
