--- a/res/xml/app_widget.xml
+++ b/res/xml/app_widget.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android" >
-    <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"/>
-    android:minWidth="294dp"
-    android:minHeight="72dp"
-    android:updatePeriodMillis="86400000"
-    android:previewImage="@drawable/preview"
-    android:initialLayout="@layout/widget_layout"
-    android:configure="bank.machine.app.AppWidgetConfigure" 
-    android:resizeMode="horizontal|vertical">
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android" android:minHeight="72dp" android:minWidth="146dp" android:initialLayout="@layout/widget_layout" android:updatePeriodMillis="180000">
+
 
 </appwidget-provider>
