--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -8,7 +8,7 @@
             android:id="@+id/imageButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/sub_button" />
+            android:src="@drawable/minus" />
 
         <Spinner
             android:id="@+id/spinner3"
@@ -30,6 +30,6 @@
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/add_button" />
+            android:src="@drawable/plus" />
 
     </LinearLayout>
