--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -46,4 +46,15 @@
             android:onClick="onClick"
             android:text="@string/createAccount" />
 
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/button3"
+            android:layout_alignRight="@+id/button3"
+            android:layout_below="@+id/button3"
+            android:layout_marginTop="21dp"
+            android:onClick="onClick"
+            android:text="@string/displayWidthdrawalButton" />
+
     </RelativeLayout>
